syntax = "proto3";

package admin.v1;

option go_package = "ecommerce/api/admin/v1;v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// AdminUser 表示管理员用户
message AdminUser {
  uint64 id = 1; // 管理员用户ID
  string username = 2; // 用户名
  string email = 3; // 邮箱
  string nickname = 4; // 昵称
  bool is_active = 5; // 是否活跃
  repeated string roles = 6; // 角色列表
  google.protobuf.Timestamp created_at = 7; // 创建时间
  google.protobuf.Timestamp updated_at = 8; // 更新时间
}

// Role 表示管理员角色
message Role {
  uint64 id = 1; // 角色ID
  string name = 2; // 角色名称 (e.g., "super_admin", "product_manager")
  string description = 3; // 角色描述
  repeated string permissions = 4; // 权限列表 (e.g., "product:read", "product:write")
  google.protobuf.Timestamp created_at = 5; // 创建时间
  google.protobuf.Timestamp updated_at = 6; // 更新时间
}

// Permission 表示权限
message Permission {
  uint64 id = 1; // 权限ID
  string name = 2; // 权限名称 (e.g., "product:read")
  string description = 3; // 权限描述
}

// AuditLog 表示审计日志
message AuditLog {
  uint64 id = 1; // 日志ID
  uint64 admin_user_id = 2; // 执行操作的管理员用户ID
  string admin_username = 3; // 执行操作的管理员用户名
  string action = 4; // 操作类型 (e.g., "CREATE_PRODUCT", "UPDATE_USER")
  string entity_type = 5; // 被操作实体类型 (e.g., "Product", "User")
  uint64 entity_id = 6; // 被操作实体ID
  string details = 7; // 操作详情 (JSON string)
  string ip_address = 8; // 操作IP地址
  google.protobuf.Timestamp created_at = 9; // 操作时间
}

// SystemSetting 表示系统配置项
message SystemSetting {
  string key = 1; // 配置项键
  string value = 2; // 配置项值
  string description = 3; // 配置项描述
  google.protobuf.Timestamp updated_at = 4; // 更新时间
}

// --- AdminUser RPCs ---

// CreateAdminUserRequest 创建管理员用户的请求
message CreateAdminUserRequest {
  string username = 1; // 用户名
  string password = 2; // 密码
  string email = 3; // 邮箱
  string nickname = 4; // 昵称
  repeated uint64 role_ids = 5; // 角色ID列表
}

// CreateAdminUserResponse 创建管理员用户的响应
message CreateAdminUserResponse {
  AdminUser admin_user = 1; // 创建成功的管理员用户
}

// GetAdminUserRequest 获取管理员用户的请求
message GetAdminUserRequest {
  uint64 id = 1; // 管理员用户ID
}

// GetAdminUserResponse 获取管理员用户的响应
message GetAdminUserResponse {
  AdminUser admin_user = 1; // 管理员用户
}

// UpdateAdminUserRequest 更新管理员用户的请求
message UpdateAdminUserRequest {
  uint64 id = 1; // 管理员用户ID
  string username = 2; // 用户名 (可选)
  string email = 3; // 邮箱 (可选)
  string nickname = 4; // 昵称 (可选)
  bool is_active = 5; // 是否活跃 (可选)
  repeated uint64 role_ids = 6; // 角色ID列表 (可选，会覆盖现有角色)
}

// UpdateAdminUserResponse 更新管理员用户的响应
message UpdateAdminUserResponse {
  AdminUser admin_user = 1; // 更新后的管理员用户
}

// DeleteAdminUserRequest 删除管理员用户的请求
message DeleteAdminUserRequest {
  uint64 id = 1; // 管理员用户ID
}

// ListAdminUsersRequest 列出管理员用户的请求
message ListAdminUsersRequest {
  int32 page_size = 1; // 每页大小
  int32 page_token = 2; // 页码
  string query = 3; // 搜索查询 (e.g., by username, email)
}

// ListAdminUsersResponse 列出管理员用户的响应
message ListAdminUsersResponse {
  repeated AdminUser admin_users = 1; // 管理员用户列表
  int32 total_count = 2; // 总数
}

// --- Role RPCs ---

// CreateRoleRequest 创建角色的请求
message CreateRoleRequest {
  string name = 1; // 角色名称
  string description = 2; // 角色描述
  repeated uint64 permission_ids = 3; // 权限ID列表
}

// CreateRoleResponse 创建角色的响应
message CreateRoleResponse {
  Role role = 1; // 创建成功的角色
}

// GetRoleRequest 获取角色的请求
message GetRoleRequest {
  uint64 id = 1; // 角色ID
}

// GetRoleResponse 获取角色的响应
message GetRoleResponse {
  Role role = 1; // 角色
}

// UpdateRoleRequest 更新角色的请求
message UpdateRoleRequest {
  uint64 id = 1; // 角色ID
  string name = 2; // 角色名称 (可选)
  string description = 3; // 角色描述 (可选)
  repeated uint64 permission_ids = 4; // 权限ID列表 (可选，会覆盖现有权限)
}

// UpdateRoleResponse 更新角色的响应
message UpdateRoleResponse {
  Role role = 1; // 更新后的角色
}

// DeleteRoleRequest 删除角色的请求
message DeleteRoleRequest {
  uint64 id = 1; // 角色ID
}

// ListRolesRequest 列出角色的请求
message ListRolesRequest {
  int32 page_size = 1; // 每页大小
  int32 page_token = 2; // 页码
}

// ListRolesResponse 列出角色的响应
message ListRolesResponse {
  repeated Role roles = 1; // 角色列表
  int32 total_count = 2; // 总数
}

// --- Permission RPCs ---

// CreatePermissionRequest 创建权限的请求
message CreatePermissionRequest {
  string name = 1; // 权限名称
  string description = 2; // 权限描述
}

// CreatePermissionResponse 创建权限的响应
message CreatePermissionResponse {
  Permission permission = 1; // 创建成功的权限
}

// GetPermissionRequest 获取权限的请求
message GetPermissionRequest {
  uint64 id = 1; // 权限ID
}

// GetPermissionResponse 获取权限的响应
message GetPermissionResponse {
  Permission permission = 1; // 权限
}

// ListPermissionsRequest 列出权限的请求
message ListPermissionsRequest {
  int32 page_size = 1; // 每页大小
  int32 page_token = 2; // 页码
}

// ListPermissionsResponse 列出权限的响应
message ListPermissionsResponse {
  repeated Permission permissions = 1; // 权限列表
  int32 total_count = 2; // 总数
}

// --- AuditLog RPCs ---

// ListAuditLogsRequest 列出审计日志的请求
message ListAuditLogsRequest {
  int32 page_size = 1; // 每页大小
  int32 page_token = 2; // 页码
  uint64 admin_user_id = 3; // 按管理员用户ID过滤
  string action = 4; // 按操作类型过滤
  string entity_type = 5; // 按实体类型过滤
  uint64 entity_id = 6; // 按实体ID过滤
  google.protobuf.Timestamp start_time = 7; // 开始时间
  google.protobuf.Timestamp end_time = 8; // 结束时间
}

// ListAuditLogsResponse 列出审计日志的响应
message ListAuditLogsResponse {
  repeated AuditLog audit_logs = 1; // 审计日志列表
  int32 total_count = 2; // 总数
}

// --- SystemSetting RPCs ---

// GetSystemSettingRequest 获取系统配置的请求
message GetSystemSettingRequest {
  string key = 1; // 配置项键
}

// GetSystemSettingResponse 获取系统配置的响应
message GetSystemSettingResponse {
  SystemSetting setting = 1; // 系统配置项
}

// UpdateSystemSettingRequest 更新系统配置的请求
message UpdateSystemSettingRequest {
  string key = 1; // 配置项键
  string value = 2; // 配置项值
  string description = 3; // 配置项描述 (可选)
}

// UpdateSystemSettingResponse 更新系统配置的响应
message UpdateSystemSettingResponse {
  SystemSetting setting = 1; // 更新后的系统配置项
}

// AdminService 定义管理员服务
service AdminService {
  // --- AdminUser 管理 ---
  rpc CreateAdminUser(CreateAdminUserRequest) returns (CreateAdminUserResponse);
  rpc GetAdminUser(GetAdminUserRequest) returns (GetAdminUserResponse);
  rpc UpdateAdminUser(UpdateAdminUserRequest) returns (UpdateAdminUserResponse);
  rpc DeleteAdminUser(DeleteAdminUserRequest) returns (google.protobuf.Empty);
  rpc ListAdminUsers(ListAdminUsersRequest) returns (ListAdminUsersResponse);

  // --- Role 管理 ---
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse);
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse);
  rpc DeleteRole(DeleteRoleRequest) returns (google.protobuf.Empty);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);

  // --- Permission 管理 ---
  rpc CreatePermission(CreatePermissionRequest) returns (CreatePermissionResponse);
  rpc GetPermission(GetPermissionRequest) returns (GetPermissionResponse);
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);

  // --- AuditLog 查询 ---
  rpc ListAuditLogs(ListAuditLogsRequest) returns (ListAuditLogsResponse);

  // --- SystemSetting 管理 ---
  rpc GetSystemSetting(GetSystemSettingRequest) returns (GetSystemSettingResponse);
  rpc UpdateSystemSetting(UpdateSystemSettingRequest) returns (UpdateSystemSettingResponse);
}